--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
     <!-- Script oficial do Instagram (necessário pro embed renderizar) -->
     <script async src="https://www.instagram.com/embed.js"></script>
 
-    <script src="/frontend/script.js"></script>
+    <script src="/script.js"></script>
 
     <!-- ✅ Script do carrinho + Comprar indo direto pro checkout -->
     <script>
