--- a/produtos.html
+++ b/produtos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Produtos | BioVida</title>
-    <link rel="stylesheet" href="/frontend/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
     <style>
       :root {
@@ -453,11 +453,7 @@
           <a href="/frontend/produtos.html" class="nav__link">PRODUTOS</a>
         </nav>
 
-        <a
-          href="/frontend/index.html"
-          class="brand"
-          aria-label="Empório BioVida"
-        >
+        <a href="/index.html" class="brand" aria-label="Empório BioVida">
           <span class="brand__emp">EMPÓRIO</span>
           <span class="brand__name">
             <span class="brand__bio">Bio</span
@@ -467,7 +463,7 @@
         </a>
 
         <nav class="nav__side nav__side--right">
-          <a href="/frontend/sobre.html" class="nav__link">SOBRE</a>
+          <a href="/sobre.html" class="nav__link">SOBRE</a>
           <a href="#" class="nav__link">CONTATO</a>
         </nav>
       </div>
