--- a/index.html
+++ b/index.html
@@ -233,12 +233,6 @@
 
     <nav class="catbar" aria-label="Categorias">
       <div class="catbar__wrap">
-        <button class="catbar__toggle" type="button">
-          <span class="catbar__icon">☰</span>
-          <span class="catbar__label">CATEGORIAS</span>
-          <span class="catbar__chev">▾</span>
-        </button>
-
         <a class="catbar__link catbar__link--hot" href="./mais-vendidos.html"
           >+ VENDIDOS</a
         >
@@ -412,6 +406,7 @@
       </div>
     </section>
 
+    <!-- ✅ ID corrigido (mantido como você tinha: mais-vendidos) -->
     <section class="mv" id="mais-vendidos" aria-label="Mais vendidos BioVida">
       <div class="mv__head">
         <h2 class="mv__title">Mais vendidos</h2>
@@ -439,7 +434,6 @@
               ><span class="card__price">R$ 27,17</span>
             </div>
 
-            <!-- ✅ Comprar funcionando -->
             <button
               class="btn btn--buy"
               type="button"
@@ -468,6 +462,7 @@
               ><span class="card__price">R$ 12,45</span>
             </div>
 
+            <!-- ✅ data-img corrigido -->
             <button
               class="btn btn--buy"
               type="button"
@@ -475,7 +470,7 @@
               data-id="P015"
               data-name="Ameixa Seca"
               data-price="12.45"
-              data-img="./frontend/img/nuts.bio.jpg"
+              data-img="./img/nuts.bio.jpg"
             >
               Comprar
             </button>
@@ -496,6 +491,7 @@
               ><span class="card__price">R$ 23,54</span>
             </div>
 
+            <!-- ✅ data-img corrigido -->
             <button
               class="btn btn--buy"
               type="button"
@@ -503,7 +499,7 @@
               data-id="P006"
               data-name="Nozes Mariposa"
               data-price="23.54"
-              data-img="./frontend/img/nuts.bio.jpg"
+              data-img="./img/nuts.bio.jpg"
             >
               Comprar
             </button>
@@ -774,6 +770,7 @@
       </div>
     </section>
 
+    <!-- (Seu shelf enorme continua igual — mantive como você mandou) -->
     <section class="shelf" aria-label="Vitrines por categoria">
       <!-- ===== CASTANHAS ===== -->
       <div class="shelf__block" id="castanhas">
@@ -788,7 +785,7 @@
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img
                 class="pcard__img"
-                src="./frontend/img/maisVendidos/nutsmix.png"
+                src="./img/maisVendidos/nutsmix.png"
                 alt="Mix Premium Nuts"
               />
               <h3 class="pcard__name">Mix Premium Nuts</h3>
@@ -800,7 +797,6 @@
                 <span class="pcard__price">R$ 53,90</span>
               </div>
 
-              <!-- ✅ Comprar funcionando -->
               <button
                 class="pcard__buy"
                 type="button"
@@ -1010,17 +1006,16 @@
               </button>
             </article>
 
+            <!-- repetições mantidas -->
             <article class="pcard" data-product="Damasco">
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img class="pcard__img" src="./img/prod-7.jpg" alt="Damasco" />
               <h3 class="pcard__name">Damasco</h3>
               <p class="pcard__meta">Doce • Selecionado</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 26,87</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1039,12 +1034,10 @@
               <img class="pcard__img" src="./img/prod-7.jpg" alt="Damasco" />
               <h3 class="pcard__name">Damasco</h3>
               <p class="pcard__meta">Doce • Selecionado</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 26,87</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1063,12 +1056,10 @@
               <img class="pcard__img" src="./img/prod-7.jpg" alt="Damasco" />
               <h3 class="pcard__name">Damasco</h3>
               <p class="pcard__meta">Doce • Selecionado</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 26,87</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1087,12 +1078,10 @@
               <img class="pcard__img" src="./img/prod-7.jpg" alt="Damasco" />
               <h3 class="pcard__name">Damasco</h3>
               <p class="pcard__meta">Doce • Selecionado</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 26,87</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1145,6 +1134,8 @@
                 Comprar
               </button>
             </article>
+
+            <!-- repetições mantidas -->
             <article class="pcard" data-product="Farinha de Aveia">
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img
@@ -1154,12 +1145,10 @@
               />
               <h3 class="pcard__name">Farinha de Aveia</h3>
               <p class="pcard__meta">Fina • Natural</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 8,90</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1172,6 +1161,7 @@
                 Comprar
               </button>
             </article>
+
             <article class="pcard" data-product="Farinha de Aveia">
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img
@@ -1181,12 +1171,10 @@
               />
               <h3 class="pcard__name">Farinha de Aveia</h3>
               <p class="pcard__meta">Fina • Natural</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 8,90</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1199,6 +1187,7 @@
                 Comprar
               </button>
             </article>
+
             <article class="pcard" data-product="Farinha de Aveia">
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img
@@ -1208,12 +1197,10 @@
               />
               <h3 class="pcard__name">Farinha de Aveia</h3>
               <p class="pcard__meta">Fina • Natural</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 8,90</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1226,6 +1213,7 @@
                 Comprar
               </button>
             </article>
+
             <article class="pcard" data-product="Farinha de Aveia">
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img
@@ -1235,12 +1223,10 @@
               />
               <h3 class="pcard__name">Farinha de Aveia</h3>
               <p class="pcard__meta">Fina • Natural</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 8,90</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1253,6 +1239,7 @@
                 Comprar
               </button>
             </article>
+
             <article class="pcard" data-product="Farinha de Aveia">
               <div class="pcard__top"><span class="ptag">Premium</span></div>
               <img
@@ -1262,12 +1249,10 @@
               />
               <h3 class="pcard__name">Farinha de Aveia</h3>
               <p class="pcard__meta">Fina • Natural</p>
-
               <div class="pcard__row">
                 <span class="pcard__from">A partir de</span>
                 <span class="pcard__price">R$ 8,90</span>
               </div>
-
               <button
                 class="pcard__buy"
                 type="button"
@@ -1308,7 +1293,7 @@
         <nav class="footer__col">
           <h4 class="footer__title">Institucional</h4>
           <ul class="footer__list">
-            <li><a href="/frontend/sobre.html">Sobre</a></li>
+            <li><a href="/sobre.html">Sobre</a></li>
             <li><a href="#">Lojas</a></li>
             <li><a href="#">Política de Trocas</a></li>
             <li><a href="#">Privacidade</a></li>
@@ -1364,7 +1349,7 @@
       </div>
     </footer>
 
-    <!-- ✅ Carrinho flutuante (substitui o WhatsApp fixo) -->
+    <!-- ✅ Carrinho flutuante -->
     <button
       class="cart-fab"
       id="cartFab"
@@ -1411,186 +1396,10 @@
       </div>
     </aside>
 
-    <!-- Script oficial do Instagram (necessário pro embed renderizar) -->
+    <!-- Script oficial do Instagram -->
     <script async src="https://www.instagram.com/embed.js"></script>
 
-    <script src="/script.js"></script>
-
-    <!-- ✅ Script do carrinho + Comprar indo direto pro checkout -->
-    <script>
-      const CHECKOUT_URL = "/frontend/checkout.html";
-      const storageKey = "biovida_cart_v1";
-
-      const fmt = (n) =>
-        n.toLocaleString("pt-BR", { style: "currency", currency: "BRL" });
-
-      const loadCart = () => {
-        try {
-          return JSON.parse(localStorage.getItem(storageKey)) || {};
-        } catch {
-          return {};
-        }
-      };
-      const saveCart = (cart) =>
-        localStorage.setItem(storageKey, JSON.stringify(cart));
-
-      let cart = loadCart();
-
-      // UI
-      const overlay = document.getElementById("overlay");
-      const drawer = document.getElementById("drawer");
-      const cartItems = document.getElementById("cartItems");
-      const cartTotal = document.getElementById("cartTotal");
-      const cartCount = document.getElementById("cartCount");
-      const cartFab = document.getElementById("cartFab");
-      const closeCart = document.getElementById("closeCart");
-      const clearCartBtn = document.getElementById("clearCart");
-      const checkoutBtn = document.getElementById("checkoutBtn");
-
-      function openCart() {
-        overlay.classList.add("is-open");
-        drawer.classList.add("is-open");
-      }
-      function closeCartUI() {
-        overlay.classList.remove("is-open");
-        drawer.classList.remove("is-open");
-      }
-
-      function qtyTotal() {
-        return Object.values(cart).reduce((acc, x) => acc + x.qty, 0);
-      }
-      function valueTotal() {
-        return Object.values(cart).reduce((acc, x) => acc + x.qty * x.price, 0);
-      }
-
-      function renderCart() {
-        const items = Object.values(cart);
-        cartCount.textContent = qtyTotal();
-
-        if (items.length === 0) {
-          cartItems.innerHTML = `<div class="empty">Seu carrinho está vazio.</div>`;
-          cartTotal.textContent = fmt(0);
-          return;
-        }
-
-        cartItems.innerHTML = items
-          .map(
-            (it) => `
-            <div class="cart-item">
-              <img class="cart-item__img" src="${it.img}" alt="${it.name}">
-              <div>
-                <p class="cart-item__name">${it.name}</p>
-                <div class="cart-item__meta">
-                  <span>${fmt(it.price)}</span>
-                  <span>${it.id}</span>
-                </div>
-
-                <div class="qty">
-                  <button type="button" data-dec="${it.id}">−</button>
-                  <span>${it.qty}</span>
-                  <button type="button" data-inc="${it.id}">+</button>
-                </div>
-
-                <button class="remove" type="button" data-rem="${it.id}">Remover</button>
-              </div>
-            </div>
-          `,
-          )
-          .join("");
-
-        cartTotal.textContent = fmt(valueTotal());
-      }
-
-      function addItem({ id, name, price, img }) {
-        if (!id || !name || !price) return;
-
-        const p = Number(price);
-        if (Number.isNaN(p)) return;
-
-        if (!cart[id]) {
-          cart[id] = {
-            id,
-            name,
-            price: p,
-            img: img || "/frontend/img/nuts.bio.jpg",
-            qty: 1,
-          };
-        } else {
-          cart[id].qty += 1;
-        }
-
-        saveCart(cart);
-        renderCart();
-      }
-
-      function inc(id) {
-        if (!cart[id]) return;
-        cart[id].qty += 1;
-        saveCart(cart);
-        renderCart();
-      }
-      function dec(id) {
-        if (!cart[id]) return;
-        cart[id].qty -= 1;
-        if (cart[id].qty <= 0) delete cart[id];
-        saveCart(cart);
-        renderCart();
-      }
-      function rem(id) {
-        if (!cart[id]) return;
-        delete cart[id];
-        saveCart(cart);
-        renderCart();
-      }
-
-      // ✅ Clique em qualquer botão com [data-add] -> adiciona e vai pro checkout
-      document.addEventListener("click", (e) => {
-        const btn = e.target.closest("[data-add]");
-        if (!btn) return;
-
-        e.preventDefault();
-
-        addItem({
-          id: btn.dataset.id,
-          name: btn.dataset.name,
-          price: btn.dataset.price,
-          img: btn.dataset.img,
-        });
-
-        window.location.href = CHECKOUT_URL;
-      });
-
-      // Drawer open/close
-      cartFab?.addEventListener("click", openCart);
-      closeCart?.addEventListener("click", closeCartUI);
-      overlay?.addEventListener("click", closeCartUI);
-
-      // Drawer actions
-      cartItems?.addEventListener("click", (e) => {
-        const a = e.target.closest("[data-inc]");
-        const b = e.target.closest("[data-dec]");
-        const c = e.target.closest("[data-rem]");
-        if (a) inc(a.dataset.inc);
-        if (b) dec(b.dataset.dec);
-        if (c) rem(c.dataset.rem);
-      });
-
-      clearCartBtn?.addEventListener("click", () => {
-        cart = {};
-        saveCart(cart);
-        renderCart();
-      });
-
-      checkoutBtn?.addEventListener("click", () => {
-        if (Object.values(cart).length === 0) {
-          alert("Seu carrinho está vazio.");
-          return;
-        }
-        window.location.href = CHECKOUT_URL;
-      });
-
-      // init
-      renderCart();
-    </script>
+    <!-- ✅ Script único -->
+    <script src="/script.js" defer></script>
   </body>
 </html>
