--- a/mais-vendidos.html
+++ b/mais-vendidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mais Vendidos | BioVida</title>
-    <link rel="stylesheet" href="/frontend/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <style>
       :root {
         --ink: #0f0f10;
@@ -167,13 +167,9 @@
       <div class="nav__wrap">
         <nav class="nav__side nav__side--left">
           <a href="/index.html" class="nav__link">HOME</a>
-          <a href="/frontend/produtos.html" class="nav__link">PRODUTOS</a>
+          <a href="/produtos.html" class="nav__link">PRODUTOS</a>
         </nav>
-        <a
-          href="/frontend/index.html"
-          class="brand"
-          aria-label="Empório BioVida"
-        >
+        <a href="/index.html" class="brand" aria-label="Empório BioVida">
           <span class="brand__emp">EMPÓRIO</span>
           <span class="brand__name"
             ><span class="brand__bio">Bio</span
@@ -182,7 +178,7 @@
           <span class="brand__sub">PRODUTOS NATURAIS</span>
         </a>
         <nav class="nav__side nav__side--right">
-          <a href="/frontend/sobre.html" class="nav__link">SOBRE</a>
+          <a href="/sobre.html" class="nav__link">SOBRE</a>
           <a href="#" class="nav__link">CONTATO</a>
         </nav>
       </div>
