--- a/pedido-enviado.html
+++ b/pedido-enviado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pedido enviado | BioVida</title>
-    <link rel="stylesheet" href="/frontend/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <style>
       :root {
         --ink: #0f0f10;
@@ -131,14 +131,10 @@
     <header class="nav">
       <div class="nav__wrap">
         <nav class="nav__side nav__side--left">
-          <a href="/frontend/index.html" class="nav__link">HOME</a>
-          <a href="/frontend/mais-vendidos.html" class="nav__link">PRODUTOS</a>
+          <a href="/index.html" class="nav__link">HOME</a>
+          <a href="/mais-vendidos.html" class="nav__link">PRODUTOS</a>
         </nav>
-        <a
-          href="/frontend/index.html"
-          class="brand"
-          aria-label="Empório BioVida"
-        >
+        <a href="/index.html" class="brand" aria-label="Empório BioVida">
           <span class="brand__emp">EMPÓRIO</span>
           <span class="brand__name"
             ><span class="brand__bio">Bio</span
@@ -147,7 +143,7 @@
           <span class="brand__sub">PRODUTOS NATURAIS</span>
         </a>
         <nav class="nav__side nav__side--right">
-          <a href="/frontend/sobre.html" class="nav__link">SOBRE</a>
+          <a href="/sobre.html" class="nav__link">SOBRE</a>
           <a href="#" class="nav__link">CONTATO</a>
         </nav>
       </div>
@@ -171,12 +167,8 @@
         <div class="box" id="details"></div>
 
         <div class="row" style="margin-top: 16px">
-          <a class="btn" href="/frontend/mais-vendidos.html"
-            >Voltar aos produtos</a
-          >
-          <a class="btn btn--primary" href="/frontend/index.html"
-            >Ir para a Home</a
-          >
+          <a class="btn" href="/mais-vendidos.html">Voltar aos produtos</a>
+          <a class="btn btn--primary" href="/index.html">Ir para a Home</a>
         </div>
       </section>
     </main>
