--- a/produtos.html
+++ b/produtos.html
@@ -449,8 +449,8 @@
     <header class="nav">
       <div class="nav__wrap">
         <nav class="nav__side nav__side--left">
-          <a href="/frontend/index.html" class="nav__link">HOME</a>
-          <a href="/frontend/produtos.html" class="nav__link">PRODUTOS</a>
+          <a href="/index.html" class="nav__link">HOME</a>
+          <a href="/produtos.html" class="nav__link">PRODUTOS</a>
         </nav>
 
         <a href="/index.html" class="brand" aria-label="Empório BioVida">
