--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/frontend/style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <header class="nav">
@@ -12,15 +12,11 @@
         <!-- Menu esquerdo -->
         <nav class="nav__side nav__side--left">
           <a href="/index.html" class="nav__link">HOME</a>
-          <a href="/frontend/produtos.html" class="nav__link">PRODUTOS</a>
+          <a href="/produtos.html" class="nav__link">PRODUTOS</a>
         </nav>
 
         <!-- Logo central BioVida -->
-        <a
-          href="/frontend/index.html"
-          class="brand"
-          aria-label="Empório BioVida"
-        >
+        <a href="/index.html" class="brand" aria-label="Empório BioVida">
           <span class="brand__emp">EMPÓRIO</span>
           <span class="brand__name">
             <span class="brand__bio">Bio</span
@@ -57,9 +53,7 @@
           >
             Falar no WhatsApp
           </a>
-          <a class="sbtn" href="/frontend/index.html#mais-vendidos">
-            Ver produtos
-          </a>
+          <a class="sbtn" href="/index.html#mais-vendidos"> Ver produtos </a>
         </div>
 
         <!-- stats com contador animado -->
