--- a/pedido.html
+++ b/pedido.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pedido | BioVida</title>
-    <link rel="stylesheet" href="/frontend/style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <style>
       :root {
         --ink: #0f0f10;
@@ -99,8 +99,8 @@
     <header class="nav">
       <div class="nav__wrap">
         <nav class="nav__side nav__side--left">
-          <a href="/frontend/index.html" class="nav__link">HOME</a>
-          <a href="/frontend/mais-vendidos.html" class="nav__link">PRODUTOS</a>
+          <a href="/index.html" class="nav__link">HOME</a>
+          <a href="/mais-vendidos.html" class="nav__link">PRODUTOS</a>
         </nav>
         <a
           href="/frontend/index.html"
@@ -115,7 +115,7 @@
           <span class="brand__sub">PRODUTOS NATURAIS</span>
         </a>
         <nav class="nav__side nav__side--right">
-          <a href="/frontend/sobre.html" class="nav__link">SOBRE</a>
+          <a href="/sobre.html" class="nav__link">SOBRE</a>
           <a href="#" class="nav__link">CONTATO</a>
         </nav>
       </div>
@@ -142,8 +142,8 @@
         </div>
 
         <div class="row" style="margin-top: 16px">
-          <a class="btn" href="/frontend/checkout.html">Voltar ao checkout</a>
-          <a class="btn btn--primary" href="/frontend/mais-vendidos.html"
+          <a class="btn" href="/checkout.html">Voltar ao checkout</a>
+          <a class="btn btn--primary" href="/mais-vendidos.html"
             >Comprar mais</a
           >
         </div>
